--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
+
 {
-  "name": "bonds-connect:-an-ai-powered-couples-connection-app",
+  "name": "bonds-connect",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.0",
-    "react-markdown": "^10.1.0",
-    "react": "^19.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.0.0",
     "@google/genai": "^1.27.0",
-    "@supabase/supabase-js": "latest"
+    "@supabase/supabase-js": "^2.48.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^6.0.0"
   }
 }
