--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/node": "^20.0.0",
+    "@vitejs/plugin-react": "^4.3.0",
     "typescript": "^5.0.0",
     "vite": "^6.0.0"
   }
